# payment_channel_spec

./: .gitignore  PaymentChannel.cfg  PaymentChannel.tla  PaymentChannel_FooTest.cfg  PaymentChannel_FooTest.tla
PaymentChannel.toolbox/: .project
implementation/: Cargo.toml
implementation/src/: main.rs
