[package]
name = "implementation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.59"
anyhow = "1.0"
url = "2.2.2"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
canonical_json = "0.4.0"
modelator = "0.1.0"